# MCP-Dubai

./: .env.example  .gitignore  CONTRIBUTING.md  CREDENTIALS.md  DISCLAIMER.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: broken_api.md  bug_report.md  feature_request.md  knowledge_update.md
.github/workflows/: ci.yml  publish.yml
src/mcp_dubai/: __init__.py  __main__.py  server.py
src/mcp_dubai/_shared/: __init__.py  aliases.py  auth.py  constants.py  discovery.py  errors.py  health.py  http_client.py  knowledge.py  schemas.py
src/mcp_dubai/agents/: __init__.py
src/mcp_dubai/agents/arabic_writer/: __init__.py  server.py  tools.py
src/mcp_dubai/agents/data_analyst/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/: __init__.py
src/mcp_dubai/biz/_data/: __init__.py  banks.json  compliance.json  createapps.json  dcde.json  events.json  founder_essentials.json  free_zones.json  funding.json  gov_portals.json  halal.json  ip_trademark.json  loader.py  parkin.json  tax_compliance.json  visas.json
src/mcp_dubai/biz/banking/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/compliance/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/createapps/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/dcde/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/events/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/founder_essentials/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/free_zones/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/funding/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/gov_portals/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/halal/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/ip_trademark/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/parkin/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/setup_advisor/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/tax_compliance/: __init__.py  server.py  tools.py
src/mcp_dubai/biz/visas/: __init__.py  server.py  tools.py
src/mcp_dubai/data/: __init__.py
src/mcp_dubai/data/air_quality/: __init__.py  auth.py  client.py  constants.py  server.py  tools.py
tests/: conftest.py
tests/test_agents/: test_arabic_writer.py  test_data_analyst.py
tests/test_biz/: test_banking.py  test_founder_essentials.py  test_free_zones.py  test_phase3b_batch1.py  test_phase3b_batch2.py  test_phase3b_batch3.py  test_setup_advisor.py  test_tax_compliance.py  test_visas.py
tests/test_data/: test_air_quality.py  test_al_adhan.py  test_aviation_weather.py  test_cbuae.py  test_fcsc_ckan.py  test_holidays.py  test_khda.py  test_osm_overpass.py  test_phase4_dubai_pulse.py  test_quran_cloud.py
tests/test_shared/: test_aliases.py  test_auth.py  test_discovery.py  test_errors.py  test_health.py  test_http_client.py  test_schemas.py  test_server_skeleton.py
(+50 files in other folders)
